New options added : * --emitReadOnly : if set, deactivates constructors and setter in the generated types * --excludeMethods : a list of regular expressions that will be used to exclude methods by name Added some build and launch scripts to download all the resources needed for the npm-modules-engine configuration Upgraded Gradle Updated gitignore file with more files to ignore